updated after recompile uncovered deprecations